work in progress

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                             </select>
                         </div>
                     </div>
-                    <div>
-                        <button>
+                    <div class="d-flex justify-content-center my-5">
+                        <button class="mx-4">
                             Genera
                         </button>
-                        <button>
+                        <button class="mx-4">
                             Annulla
                         </button>
                     </div>
@@ -56,15 +56,15 @@
                         Dettagli Passeggeri
                     </h3>
                     <div class="ticket-box row d-flex justify-content-between">
-                        <div class="col">
-                            <h3>
+                        <div class="col-4 p-3">
+                            <h5>
                                 Nome Passeggero
-                            </h3>
-                            <h4>
+                            </h5>
+                            <h6>
                                 Jon Snow
-                            </h4>
+                            </h6>
                         </div>
-                        <div class="col">
+                        <div class="col-2 p-3 d-flex justify-content-between flex-column">
                             <h5>
                                 Offerta
                             </h5>
@@ -72,7 +72,7 @@
                                 Biglietto Standard
                             </p>
                         </div>
-                        <div class="col">
+                        <div class="col-2 p-3 d-flex justify-content-between flex-column">
                             <h5>
                                 Carrozza
                             </h5>
@@ -80,7 +80,7 @@
                                 5
                             </p>
                         </div>
-                        <div class="col">
+                        <div class="col-2 p-3 d-flex justify-content-between flex-column">
                             <h5>
                                 Codice CP
                             </h5>
@@ -88,7 +88,7 @@
                                 92911
                             </p>
                         </div>
-                        <div class="col">
+                        <div class="col-2 p-3 d-flex justify-content-between flex-column">
                             <h5>
                                 Costo Biglietto
                             </h5>
