--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                             <div class="mx-4">
                                 <label for="age" class="form-label mb-2">Fascia d'età</label>
                                 <select class="form-select" id="fascia">
-                                    <option value="minorenne">Minorenne</option>
-                                    <option value="adulto">Adulto</option>
-                                    <option value="pensionato">Pensionato</option>
+                                    <option value="minorenne" id="minorenne">Minorenne</option>
+                                    <option value="adulto" id="adulto">Adulto</option>
+                                    <option value="pensionato" id="pensionato">Pensionato</option>
                                 </select>
                             </div>
                         </div>
@@ -94,7 +94,7 @@
                             <h5>
                                 Costo Biglietto
                             </h5>
-                            <p class="box-5">
+                            <p class="box-5" for="price">
                                 
                             </p>
                         </div>
